# Cpp_Project_Creator

./: .gitignore  CMakeLists.txt  Cpp-Project-Creator.md  Cpp_Project_Creator.code-workspace  README.md  cmake.sh  copy.sh
src/app/: main.cpp
src/classes/: prjexception.cpp  prjexception.hpp  project.cpp  project.hpp
src/data/: cmake_qt.txt
src/header/: constants.hpp  filecontents.hpp  util.hpp
